--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-  "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "npm i"
-
   },
   "keywords": [],
   "author": "",
@@ -23,8 +22,6 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3"
+    "react": "^18.2.0"
   }
 }
