--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.3.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "socket.io": "^4.7.5"
   }
 }
