--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "browserify-zlib": "^0.2.0",
+    "chart.js": "^4.4.2",
     "crypto-browserify": "^3.12.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
